--- a/homepage.html
+++ b/homepage.html
@@ -1,170 +1,170 @@
 <div class="w-full p-6 mb-10">
-  
+
   <div class="flex flex-col-reverse lg:flex-row items-center max-w-4xl mx-auto gap-10">
-  
-    <!-- LEFT: Banner + Intro -->
+
+    <!-- left banner intro -->
     <div class="w-full lg:w-1/2 text-center">
-      <!-- On mobile: text-2xl, on md+: text-4xl -->
-      <h1 class="text-2xl md:text-4xl main-heading font-bold mb-2 font-heading text-center animate-fade-up animate-once animate-ease-linear animate-duration-[2000ms]">
+      <h1
+        class="text-2xl md:text-4xl main-heading font-bold mb-2 font-heading text-center animate-fade-up animate-once animate-ease-linear animate-duration-[2000ms]">
         HORIZON
       </h1>
-      <!-- On mobile: text-xl, on md+: text-4xl -->
-      <h2 class="text-xl md:text-4xl mb-2 font-heading text-center animate-fade-up animate-once animate-ease-linear animate-duration-[2000ms]">
+      <h2
+        class="text-xl md:text-4xl mb-2 font-heading text-center animate-fade-up animate-once animate-ease-linear animate-duration-[2000ms]">
         Web Development
       </h2>
-      <!-- On mobile: text-base, on md+: text-xl -->
-      <h2 class="text-base md:text-xl mb-2 mt-2 text-center animate-fade-up animate-once animate-ease-linear animate-duration-[2000ms]">
-        We specialize in building innovative web solutions, from subscription-based 
-        text-to-speech apps to advanced 3D rendering platforms. Whether you need a 
-        restaurant menu management system, REST API integrations, or data 
+      <h2
+        class="text-base md:text-xl mb-2 mt-2 text-center animate-fade-up animate-once animate-ease-linear animate-duration-[2000ms]">
+        We specialize in building innovative web solutions, from subscription-based
+        text-to-speech apps to advanced 3D rendering platforms. Whether you need a
+        restaurant menu management system, REST API integrations, or data
         visualization tools, our team is here to help.
       </h2>
     </div>
-  
-    <!-- RIGHT: Image -->
+
+    <!-- right image -->
     <div class="w-full lg:w-1/2 flex justify-center">
-      <!-- On mobile: max width xs, on md+: max width sm -->
       <img src="./images/hero3.png" alt="Hero Illustration"
-      class="w-full max-w-[150px] md:max-w-sm animate-fade-down animate-once animate-ease-linear animate-duration-[2000ms]" />
+        class="w-full max-w-[150px] md:max-w-sm animate-fade-down animate-once animate-ease-linear animate-duration-[2000ms]" />
     </div>
-  
+
   </div>
 
-<div class=" w-full p-6 mb-10">
-  <!-- services -->
-  <div class="w-full max-w-5xl mt-12 flex flex-col items-center mx-auto animate-fade animate-duration-[2000ms] animate-ease-in">
-    <h2 class="text-3xl font-bold mb-8">Services We Offer</h2>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 w-full items-stretch">
-      <div class="bg-base-100 card shadow-md h-full flex flex-col">
-        <div class="card-body items-center text-center flex flex-col justify-center h-full">
-          <img src="./images/software_engineer.svg" alt="Web App + SEO Icon" class="w-20 h-20 mb-3" />
-          <h3 class="card-title">Web App + SEO</h3>
-          <p class="text-sm mt-2 ">
-            Need a robust website or application with SEO optimization?
-            We’ll help you rank higher and reach your audience.
-          </p>
+  <div class=" w-full p-6 mb-10">
+    <!-- services -->
+    <div
+      class="w-full max-w-5xl mt-12 flex flex-col items-center mx-auto animate-fade animate-duration-[2000ms] animate-ease-in">
+      <h2 class="text-3xl font-bold mb-8">Services We Offer</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 w-full items-stretch">
+        <div class="bg-base-100 card shadow-md h-full flex flex-col">
+          <div class="card-body items-center text-center flex flex-col justify-center h-full">
+            <img src="./images/software_engineer.svg" alt="Web App + SEO Icon" class="w-20 h-20 mb-3" />
+            <h3 class="card-title">Web App + SEO</h3>
+            <p class="text-sm mt-2 ">
+              Need a robust website or application with SEO optimization?
+              We’ll help you rank higher and reach your audience.
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="card bg-base-100 shadow-md h-full flex flex-col">
-        <div class="card-body items-center text-center flex flex-col justify-center h-full">
-          <img src="./images/design.svg" alt="Figma + Website Icon" class="w-20 h-20 mb-3" />
-          <h3 class="card-title">Figma + Website</h3>
-          <p class="text-sm mt-2">
-            From design mockups in Figma to a fully responsive site,
-            we turn ideas into visually striking, user-friendly sites.
-          </p>
+        <div class="card bg-base-100 shadow-md h-full flex flex-col">
+          <div class="card-body items-center text-center flex flex-col justify-center h-full">
+            <img src="./images/design.svg" alt="Figma + Website Icon" class="w-20 h-20 mb-3" />
+            <h3 class="card-title">Figma + Website</h3>
+            <p class="text-sm mt-2">
+              From design mockups in Figma to a fully responsive site,
+              we turn ideas into visually striking, user-friendly sites.
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="card bg-base-100 shadow-md h-full flex flex-col">
-        <div class="card-body items-center text-center flex flex-col justify-center h-full">
-          <img src="./images/server.svg" alt="Restaurant Menu System Icon" class="w-20 h-20 mb-3" />
-          <h3 class="card-title">Restaurant Menu System</h3>
-          <p class="text-sm mt-2">
-            Easily update menus and manage special offers, 
-            all in one mobile-friendly, streamlined web app for restaurants.
-          </p>
+        <div class="card bg-base-100 shadow-md h-full flex flex-col">
+          <div class="card-body items-center text-center flex flex-col justify-center h-full">
+            <img src="./images/server.svg" alt="Restaurant Menu System Icon" class="w-20 h-20 mb-3" />
+            <h3 class="card-title">Restaurant Menu System</h3>
+            <p class="text-sm mt-2">
+              Easily update menus and manage special offers,
+              all in one mobile-friendly, streamlined web app for restaurants.
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="card bg-base-100 shadow-md h-full flex flex-col">
-        <div class="card-body items-center text-center flex flex-col justify-center h-full">
-          <img src="./images/team.svg" alt="Complete Package Icon" class="w-20 h-20 mb-3" />
-          <h3 class="card-title">Complete Package</h3>
-          <p class="text-sm mt-2">
-            Frontend, backend, design, and social media management.
-            We cover every aspect so you can focus on your business.
-          </p>
+        <div class="card bg-base-100 shadow-md h-full flex flex-col">
+          <div class="card-body items-center text-center flex flex-col justify-center h-full">
+            <img src="./images/team.svg" alt="Complete Package Icon" class="w-20 h-20 mb-3" />
+            <h3 class="card-title">Complete Package</h3>
+            <p class="text-sm mt-2">
+              Frontend, backend, design, and social media management.
+              We cover every aspect so you can focus on your business.
+            </p>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<div class="w-full p-6 mt-0 flex flex-col justify-center items-center">
+  <div class="w-full p-6 mt-0 flex flex-col justify-center items-center">
     <!-- technologies -->
-  <div class="w-full max-w-5xl mt-12 flex flex-col items-center">
-       <h2 class="text-3xl font-bold mb-8 text-center">Technologies We Use</h2>
-       <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-6 justify-center place-items-center">
-         <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center py-4">
-        <i class="fab fa-html5 text-3xl mb-2 mt-2"></i>
-        <span class="font-medium">HTML5</span>
-      </div>
-      <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-        <i class="fab fa-css3-alt text-3xl mb-2 mt-2"></i>
-        <span class="font-medium">CSS3</span>
-      </div>
-      <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-        <i class="fab fa-js text-3xl mb-2 mt-2"></i>
-        <span class="font-medium">JavaScript</span>
-      </div>
-      <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-        <i class="fab fa-bootstrap text-3xl mb-2 mt-2"></i>
-        <span class="font-medium">Bootstrap</span>
-      </div>
-      <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-        <i class="fas fa-paint-brush text-3xl mb-2 mt-2"></i>
-        <span class="font-medium">MaterialUI</span>
-      </div>
-      <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-        <i class="fab fa-react text-3xl mb-2 mt-2"></i>
-        <span class="font-medium">ReactJS</span>
-      </div>
-      <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-        <i class="fas fa-code text-3xl mb-2 mt-2"></i>
-        <span class="font-medium">Next.js</span>
-      </div>
-      <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-        <i class="fab fa-angular text-3xl mb-2 mt-2"></i>
-        <span class="font-medium">AngularJS</span>
-      </div>
-      <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-        <i class="fas fa-code text-3xl mb-2 mt-2"></i>
-        <span class="font-medium">jQuery</span>
-      </div>
-      <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-        <i class="fab fa-node text-3xl mb-2 mt-2"></i>
-        <span class="font-medium">Node.js</span>
-      </div>
-      <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-        <i class="fas fa-server text-3xl mb-2 mt-2"></i>
-        <span class="font-medium">ExpressJS</span>
-      </div>
-      <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-        <i class="fas fa-file-code text-3xl mb-2 mt-2"></i>
-        <span class="font-medium">JSON</span>
-      </div>
-      <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-        <i class="fab fa-npm text-3xl mb-2 mt-2"></i>
-        <span class="font-medium">npm</span>
-      </div>
-      <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-        <i class="fab fa-php text-3xl mb-2 mt-2"></i>
-        <span class="font-medium">PHP</span>
-      </div>
-      <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-        <i class="fas fa-database text-3xl mb-2 mt-2"></i>
-        <span class="font-medium">MySQL</span>
-      </div>
-      <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-        <i class="fas fa-cloud text-3xl mb-2 mt-2"></i>
-        <span class="font-medium">DigitalOcean</span>
-      </div>
-      <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-        <i class="fas fa-bolt text-3xl mb-2 mt-2"></i>
-        <span class="font-medium">Chakra UI</span>
-      </div>
-      <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-        <i class="fas fa-route text-3xl mb-2 mt-2"></i>
-        <span class="font-medium">React Router</span>
-      </div>
-      <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-        <i class="fas fa-wind text-3xl mb-2 mt-2"></i>
-        <span class="font-medium">Tailwind</span>
-      </div>
-      <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
-        <i class="fas fa-star text-3xl mb-2 mt-2"></i>
-        <span class="font-medium">DaisyUI</span>
+    <div class="w-full max-w-5xl mt-12 flex flex-col items-center">
+      <h2 class="text-3xl font-bold mb-8 text-center">Technologies We Use</h2>
+      <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-6 justify-center place-items-center">
+        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center py-4">
+          <i class="fab fa-html5 text-3xl mb-2 mt-2"></i>
+          <span class="font-medium">HTML5</span>
+        </div>
+        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
+          <i class="fab fa-css3-alt text-3xl mb-2 mt-2"></i>
+          <span class="font-medium">CSS3</span>
+        </div>
+        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
+          <i class="fab fa-js text-3xl mb-2 mt-2"></i>
+          <span class="font-medium">JavaScript</span>
+        </div>
+        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
+          <i class="fab fa-bootstrap text-3xl mb-2 mt-2"></i>
+          <span class="font-medium">Bootstrap</span>
+        </div>
+        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
+          <i class="fas fa-paint-brush text-3xl mb-2 mt-2"></i>
+          <span class="font-medium">MaterialUI</span>
+        </div>
+        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
+          <i class="fab fa-react text-3xl mb-2 mt-2"></i>
+          <span class="font-medium">ReactJS</span>
+        </div>
+        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
+          <i class="fas fa-code text-3xl mb-2 mt-2"></i>
+          <span class="font-medium">Next.js</span>
+        </div>
+        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
+          <i class="fab fa-angular text-3xl mb-2 mt-2"></i>
+          <span class="font-medium">AngularJS</span>
+        </div>
+        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
+          <i class="fas fa-code text-3xl mb-2 mt-2"></i>
+          <span class="font-medium">jQuery</span>
+        </div>
+        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
+          <i class="fab fa-node text-3xl mb-2 mt-2"></i>
+          <span class="font-medium">Node.js</span>
+        </div>
+        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
+          <i class="fas fa-server text-3xl mb-2 mt-2"></i>
+          <span class="font-medium">ExpressJS</span>
+        </div>
+        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
+          <i class="fas fa-file-code text-3xl mb-2 mt-2"></i>
+          <span class="font-medium">JSON</span>
+        </div>
+        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
+          <i class="fab fa-npm text-3xl mb-2 mt-2"></i>
+          <span class="font-medium">npm</span>
+        </div>
+        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
+          <i class="fab fa-php text-3xl mb-2 mt-2"></i>
+          <span class="font-medium">PHP</span>
+        </div>
+        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
+          <i class="fas fa-database text-3xl mb-2 mt-2"></i>
+          <span class="font-medium">MySQL</span>
+        </div>
+        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
+          <i class="fas fa-cloud text-3xl mb-2 mt-2"></i>
+          <span class="font-medium">DigitalOcean</span>
+        </div>
+        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
+          <i class="fas fa-bolt text-3xl mb-2 mt-2"></i>
+          <span class="font-medium">Chakra UI</span>
+        </div>
+        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
+          <i class="fas fa-route text-3xl mb-2 mt-2"></i>
+          <span class="font-medium">React Router</span>
+        </div>
+        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
+          <i class="fas fa-wind text-3xl mb-2 mt-2"></i>
+          <span class="font-medium">Tailwind</span>
+        </div>
+        <div class="card w-36 bg-base-100 border border-base-200 shadow-md flex flex-col items-center p-4">
+          <i class="fas fa-star text-3xl mb-2 mt-2"></i>
+          <span class="font-medium">DaisyUI</span>
+        </div>
       </div>
     </div>
   </div>
-</div>
 </div>
