--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="lofi">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,31 +10,25 @@
   <link href="https://cdn.jsdelivr.net/npm/daisyui@5/themes.css" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/39c7bbdf94.js" crossorigin="anonymous"></script>
   <link
-  href="https://fonts.googleapis.com/css2?family=Onest:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Phudu:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-  rel="stylesheet"
-/>
+    href="https://fonts.googleapis.com/css2?family=Onest:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Phudu:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet" />
 </head>
+
 <body class="min-h-screen flex flex-col">
   <!-- navbar -->
   <div class="navbar bg-base-100">
     <div class="navbar-start">
       <div class="dropdown bg-base-200">
         <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-          <svg xmlns="http://www.w3.org/2000/svg" 
-               class="h-5 w-5" fill="none" 
-               viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" 
-                  stroke-linejoin="round" 
-                  stroke-width="2" 
-                  d="M4 6h16M4 12h8m-8 6h16" />
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
           </svg>
         </div>
-        <ul tabindex="0"
-          class="menu menu-sm dropdown-content z-10 mt-3 w-52 p-2 shadow bg-base-200 rounded-xl">
-        <li><a class="text-2xl sm:text-4xl font-bold" href="index.html">HOME</a></li>
-        <li><a class="text-2xl sm:text-4xl font-bold" href="about.html">ABOUT</a></li>
-        <li><a class="text-2xl sm:text-4xl font-bold" href="projects.html">PROJECTS</a></li>
-        <li><a class="text-2xl sm:text-4xl font-bold" href="contact.html">CONTACT</a></li>
+        <ul tabindex="0" class="menu menu-sm dropdown-content z-10 mt-3 w-52 p-2 shadow bg-base-200 rounded-xl">
+          <li><a class="text-2xl sm:text-4xl font-bold" href="index.html">HOME</a></li>
+          <li><a class="text-2xl sm:text-4xl font-bold" href="about.html">ABOUT</a></li>
+          <li><a class="text-2xl sm:text-4xl font-bold" href="projects.html">PROJECTS</a></li>
+          <li><a class="text-2xl sm:text-4xl font-bold" href="contact.html">CONTACT</a></li>
         </ul>
       </div>
       <a class="btn btn-ghost text-4xl font-bold theme-color">HORIZON</a>
@@ -52,8 +47,7 @@
         <input type="checkbox" value="black" class="theme-controller" />
         <!-- sun icon -->
         <svg aria-label="sun" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <g stroke-linejoin="round" stroke-linecap="round" stroke-width="2"
-             fill="none" stroke="currentColor">
+          <g stroke-linejoin="round" stroke-linecap="round" stroke-width="2" fill="none" stroke="currentColor">
             <circle cx="12" cy="12" r="4"></circle>
             <path d="M12 2v2"></path>
             <path d="M12 20v2"></path>
@@ -67,8 +61,7 @@
         </svg>
         <!-- moon icon -->
         <svg aria-label="moon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <g stroke-linejoin="round" stroke-linecap="round" stroke-width="2"
-             fill="none" stroke="currentColor">
+          <g stroke-linejoin="round" stroke-linecap="round" stroke-width="2" fill="none" stroke="currentColor">
             <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"></path>
           </g>
         </svg>
@@ -89,4 +82,5 @@
   <script src="./js/theme.js"></script>
   <script src="./js/home.js"></script>
 </body>
+
 </html>
